# app

./: .all-contributorsrc  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  contributors.yml  first-time-contributor.yml  test-pr.yml  test.yml
app/commands/: repl.py  setup_folder.py  verify.py
app/commands/progress/: reset.py  show.py
app/commands/progress/sync/: off.py  on.py
app/configs/: gitmastery_config.py  migration.py  utils.py
app/hooks/: in_gitmastery_root.py
app/logging/: setup_logging.py
scripts/: build_test_e2e.sh
tests/e2e/: conftest.py  constants.py  result.py  runner.py  test_version.py  utils.py
tests/e2e/commands/: test_check.py  test_download.py  test_progress.py  test_setup.py  test_verify.py
