[project]
name = "gitmastery"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click==8.3.2",
    "click-aliases==1.0.5",
    "difflib-parser==2.1.1",
    "git-autograder==6.8.0",
    "gitpython==3.1.46",
    "librt==0.8.1",
    "pygments==2.20.0",
    "pytermgui==7.7.4",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "repo-smith==2.7.0",
    "requests==2.33.1",
    "typing_extensions==4.15.0",
    "wcwidth==0.6.0",
]

[dependency-groups]
dev = [
    "lefthook==2.1.4",
    "mypy==1.20.0",
    "mypy_extensions==1.1.0",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.4",
    "pytest==9.0.3",
    "pytest-order==1.3.0",
    "ruff==0.15.9",
    "setuptools==82.0.1",
    "types-pytz==2026.1.1.20260304",
    "types-pyyaml==6.0.12.20260408",
    "types-requests==2.33.0.20260402",
]

[tool.mypy]
python_version = "3.13"

[tool.uv]
package = false
